corrected alignment under info and links

--- a/1stProject_Addendum.css
+++ b/1stProject_Addendum.css
@@ -19,6 +19,10 @@
   font-weight: normal;
 }
 
+.info {
+  padding-left: 0;
+}
+
 .container li{
   font-weight: bolder;
 }
